objects/Configurator_Test_Pass__c.object
<CustomObject>
    <fields>
        <fullName>Available_Redundancy__c</fullName>
        <label>Available Redundancy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CKT_Unit__c</fullName>
        <label>CKT Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Group__c</fullName>
        <label>Circuit Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Type__c</fullName>
        <label>Circuit Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration__c</fullName>
        <label>Configuration</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Configurator Test Passes</relationshipLabel>
        <relationshipName>Configurator_Test_Passes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module_Test_Pass__c</fullName>
        <label>Module Test Pass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Section__c</fullName>
        <label>Test Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Time__c</fullName>
        <label>Test Time</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>Configurator Test Pass</label>
    <nameField>
        <label>Configurator Test Pass Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configurator Test Passes</pluralLabel>
    <recordTypes>
        <fullName>Module_Test_Pass</fullName>
        <active>true</active>
        <label>Module Test Pass</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wafer_Test_Pass</fullName>
        <active>true</active>
        <label>Wafer Test Pass</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>